# nostr_pow_service

./: .env  .env.example  .gitignore  Cargo.toml  NIP-XX.md  README.md
src/: commands.rs  config.rs  lib.rs  payment.rs  peer.rs  pow.rs  websocket.rs
