[package]
name = "nostrgraph_pow_service"
description = "Proof of Work Service Provider for Nostr"
version = "0.1.0"
keywords = ["nostr", "nostr-protocol", "websocket", "pow", "proof of work", "relay"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/blakejakopovic/nostr_pow_service"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
dotenv = "0.15.0"
env_logger = "0.9.3"
log = "0.4.17"

clap = { version = "4.1.7", features = ["derive", "env"] }
futures = "0.3.25"
hex = "0.3"
nostr-rs-relay = { git = "https://github.com/scsibug/nostr-rs-relay", rev = "0.8.8" }
nostr_rust = "0.20.3"
rand = "0.8.5"
serde = "~1"
serde_json = "~1"
sha256 = "1.1.2"
tokio = { version = "*", features = ["full"] }
warp = { version = "0.3.3", features = ["tls"] }
warp-real-ip = "0.2.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
]
